# State

./: CMakeLists.txt  LICENSE  README.md  clang.sh  main.cpp
.github/workflows/: ci.yml
binaries/: instance.cpp  service.cpp
include/dotenv/: dotenv.hpp
include/zend/: app.hpp  configuration.hpp  connection.hpp  debug.hpp  instance.hpp  server.hpp  service.hpp  state.hpp
include/zend/instance/: configuration.hpp  object.hpp
include/zend/service/: configuration.hpp  connection.hpp  listener.hpp  object.hpp
include/zend/state/: state.hpp
src/: app.cpp  connection.cpp  instance.cpp  server.cpp  service.cpp
src/instance/: configuration.cpp  object.cpp
src/service/: configuration.cpp  connection.cpp  object.cpp  server.cpp
src/state/: connection.cpp  server.cpp  state.cpp
tests/: server_test.cc  service_test.cc  state_test.cc
